# durian-invest

./: CLAUDE.md  readme.md  todo
aws/: .env.example  .gitignore  aws.ipynb  aws.md  pyproject.toml
aws/bot/: __init__.py  client.py  config.py  config.yml  market_state.py  markets.py
aws/bot/feeds/: __init__.py  binance.py  chainlink.py  coinbase.py  polymarket_crypto_price.py  polymarket_market_channel.py  polymarket_state.py
aws/bot/predict/: client.py  market.py  market_channel.py  order_book.py  state.py
aws/bot/signals/: divergence.py  imbalance.py
aws/bot/state/: polymarket_order_book.py
aws/bot/strategy/: __init__.py  manager.py  predict_manager.py
aws/script/: comet.ps1  derive_keys.py  proxy.ps1  ssh.ps1
aws/script/predict.fun/: check_exchange.py  find_usdt.py  mainnet_approve.py  testnet_setup.py
aws/tests/: test_binance.py  test_chainlink.py  test_coinbase.py  test_config.py  test_divergence.py  test_manager_ws.py  test_markets.py  test_order_book.py  test_orders.py  test_polymarket_crypto_price.py  test_polymarket_feed.py  test_polymarket_order_book.py  test_polymarket_state.py  test_predict_client.py  test_predict_manager.py  test_predict_market.py  test_predict_market_channel.py  test_predict_order_book.py  test_predict_state.py  test_runner.py
aws/tests/script/: test_state.py
bot/: README.md  bot_runner.py  fly.toml  pyproject.toml  test.ipynb
bot/strategies/: __init__.py  base_strategy.py  common.yml  config_loader.py  kalshi_client.py  telegram_notifier.py  util.py
bot/strategies/gemini_portfolio/: config.yml
bot/strategies/kalshi_crypto/: __init__.py  candle_cache.py  config.py  config.yml  crypto15m_job.py  crypto_order_book.py  csv_recorder.py  engine.py  kalshi_crypto_client.py  market_state.py  models.py  notifier.py  order_boo.spec.py  shared_state.py  strategy.py  (+4 more)
(+128 files in other folders)
