[project]
name = "aws"
version = "0.1.0"
description = "Polymarket BTC 5-min orderbook imbalance bot"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4",
    "drissionpage>=4.1.1.4",
    "eth-account>=0.11.0",
    "httpx[socks]>=0.28.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
    "websockets>=13.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]
